--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,17 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+
+/* New rules for the API status indicator */
+#api_status {
+    float: right;
+    width: 40px;
+    height: 40px;
+    margin-right: 30px;
+    background-color: #cccccc;
+    border-radius: 50%;
+}
+
+#api_status.available {
+    background-color: #ff545f;
+}
